<resources>
    <string name="app_name">LXOD Calculator</string>
    <string name="edit_text_hint">请输入您需要计算的内容…</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="ad_text">点击乐学偶得官网</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="eql">=</string>
    <string name="C">C</string>
    <string name="point">.</string>

</resources>