<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/margin_sixteen"
        android:background="@drawable/edit_text_border"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/padding_eight"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                android:onClick="operationFunction"
                android:text="@string/button_one"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_two"
                android:onClick="operationFunction"
                android:text="@string/button_two"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_three"
                android:onClick="operationFunction"
                android:text="@string/button_three"
                style="@style/button_style"/>

            <Button
                android:id="@+id/C"
                android:onClick="operationFunction"
                android:text="@string/C"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:layout_marginEnd="@dimen/margin_eight" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_four"
                android:onClick="operationFunction"
                android:text="@string/button_four"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_five"
                android:onClick="operationFunction"
                android:text="@string/button_five"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_six"
                android:onClick="operationFunction"
                android:text="@string/button_six"
                style="@style/button_style"/>

            <Button
                android:id="@+id/point"
                android:onClick="operationFunction"
                android:text="@string/point"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:layout_marginEnd="@dimen/margin_eight" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_seven"
                android:onClick="operationFunction"
                android:text="@string/button_seven"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_eight"
                android:onClick="operationFunction"
                android:text="@string/button_eight"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_nine"
                android:onClick="operationFunction"
                android:text="@string/button_nine"
                style="@style/button_style"/>

            <Button
                android:id="@+id/button_zero"
                android:onClick="operationFunction"
                android:text="@string/button_zero"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:layout_marginEnd="@dimen/margin_eight" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/plus"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minus"
                android:onClick="operationFunction"
                style="@style/button_style"
                android:text="@string/minus" />

            <Button
                android:id="@+id/mul"
                android:onClick="operationFunction"
                android:text="@string/mul"
                style="@style/button_style"/>

            <Button
                android:id="@+id/div"
                android:onClick="operationFunction"
                android:text="@string/div"
                style="@style/button_style"/>

            <Button
                android:id="@+id/eql"
                android:onClick="operationFunction"
                android:text="@string/eql"
                style="@style/button_style"
                android:layout_marginRight="@dimen/margin_eight"
                android:layout_marginEnd="@dimen/margin_eight" />
        </LinearLayout>




    </LinearLayout>
</RelativeLayout>





